website/versioned_docs/version-2.7.x/docs/using-pants/project-introspection.mdx
---
    title: Project introspection
    position: 4
---

Finding insights in your project.

---

Pants provides several goals to provide insights into your project's structure.

[block:embed]
{
  "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FIpEv5cWfyko%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DIpEv5cWfyko&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FIpEv5cWfyko%2Fhqdefault.jpg&key=f2aa6fc3595946d0afc3d76cbbd25dc3&type=text%2Fhtml&schema=youtube\" width=\"640\" height=\"480\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen=\"true\"></iframe>",
  "url": "https://www.youtube.com/watch?v=IpEv5cWfyko",
  "title": "Pants Build 2: Project introspection and dependency inference",
  "favicon": "https://www.youtube.com/s/desktop/d9bba4ed/img/favicon.ico",
  "image": "https://i.ytimg.com/vi/IpEv5cWfyko/hqdefault.jpg"
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Tip: Use `xargs` to pipe these goals into other Pants commands",
  "body": "For example:\n\n```bash\n$ ./pants dependees project:lib | xargs ./pants test\n```\n\nSee [Advanced target selection](doc:advanced-target-selection) for more info and other techniques to use the results."
}
[/block]

[block:api-header]
{
  "title": "`list` - find your project's targets"
}
[/block]
`list` will find all targets that match the arguments.

For example, to show all targets in your project:

```bash
$ ./pants list ::
//:ansicolors
//:setuptools
helloworld:config
helloworld:config_file
...
```
[block:api-header]
{
  "title": "`filter` - find targets that match a predicate"
}
[/block]
`filter` is like `list`, but will only include targets that match the predicate(s).

Specify a predicate by using one of the below `filter` options, like `--target-type`. You can use a comma to OR multiple values, meaning that at least one member must be matched. You can repeat the option multiple times to AND each filter. You can prefix the filter with `-` to negate the filter, meaning that the target must not be true for the filter.

Some examples:

```bash
# Only `python_library` targets.
./pants filter --target-type=python_library ::

# `python_library` or `python_tests` targets.
./pants filter --target-type='python_library,python_tests' ::

# `python_library` targets which have "type_checked" in their `tags` field.
./pants filter --target-type=python_library --tag-regex=type_checked ::

# Any target except for `python_library` targets
./pants filter --target-type='-python_library' ::
```

### `filter --target-type`

Each value should be the name of a target type, e.g. `python_library` or `resources`. Run `./pants help targets` to see what targets are registered.

### `filter --address-regex`

Regex strings for the address, such as `^dir` or `:util$`.

### `filter --tag-regex`

Regex strings for the `tags` field. Alternatively, you can use the global `--tags` option, which uses exact string matches instead of regex. See [Advanced target selection](doc:advanced-target-selection).

[block:api-header]
{
  "title": "`dependencies` - find a target's dependencies"
}
[/block]
Use `dependencies` to list all targets used directly by a target.

```bash
$ ./pants dependencies helloworld/util:util
//:setuptools
//:translate
helloworld/protos:protos
```

To include transitive dependencies—meaning the dependencies of the direct dependencies—use `--transitive`:

```bash
$ ./pants dependencies --transitive helloworld/util:util
//:protobuf
//:requirements.txt
//:setuptools
//:translate
helloworld/protos:protos
```

You can also output your 3rdparty requirements (e.g. Python requirement strings) by using `--type=3rdparty` or `--type=source-and-3rdparty`:

```bash
$ ./pants dependencies --type=3rdparty helloworld/util:util
setuptools>=42.0.0
translate>=3.2.1
```
[block:api-header]
{
  "title": "`dependees` - find which targets depend on a target"
}
[/block]
The `dependees` goal finds all targets that directly depend on the target you specify.

```bash
$ ./pants dependees helloworld/util:util
helloworld:config
helloworld/greet:greet
helloworld/util:tests
```

To include transitive dependees—meaning targets that don't directly depend on your target, but which depend on a target that does directly use your target—use `--transitive`:

```bash
$ ./pants dependees --transitive helloworld/util:util
helloworld:config
helloworld:helloworld
helloworld:helloworld-awslambda
helloworld/greet:greet
helloworld/greet:tests
helloworld/util:tests
```

To include the original target itself, use `--closed`:

```bash
$ ./pants dependees --closed helloworld/util:util
helloworld:config
helloworld/greet:greet
helloworld/util:tests
helloworld/util:util
```

Finally, we recommend `--output-format=json` when using multiple input targets:

```
$ ./pants dependees --output-format=json helloworld/util:util helloworld/protos:protos
{
    "helloworld/protos:protos": [
        "helloworld/util:util",
        "helloworld:config"
    ],
    "helloworld/util:util": [
        "helloworld/greet:greet",
        "helloworld/util:tests",
        "helloworld:config"
    ]
}
```
[block:callout]
{
  "type": "info",
  "title": "Tip: use `dependees` when starting a big migration",
  "body": "Running `./pants dependees --transitive --output-format=json ::` will allow you to find the most-depended on code in your project, such as util code. Often, you will want to convert these targets first.\n\nFor example, do this when [migrating from Python 2 to Python 3](doc:python-interpreter-compatibility), or adding an incremental type checker like MyPy or TypeScript to your project."
}
[/block]

[block:api-header]
{
  "title": "`filedeps` - find which files a target owns"
}
[/block]
`filedeps` outputs all of the files belonging to a target, based on its `sources` field.

```bash
$ ./pants filedeps helloworld/util:util
helloworld/util/BUILD
helloworld/util/config_loader.py
helloworld/util/lang.py
```

To output absolute paths, use the option `--absolute`:

```bash
$ ./pants filedeps --absolute helloworld/util:util
/Users/pantsbuild/example-python/helloworld/util/BUILD
/Users/pantsbuild/example-python/helloworld/util/config_loader.py
/Users/pantsbuild/example-python/helloworld/util/lang.py
```

To include the files used by dependencies (including transitive dependencies), use `--transitive`:

```bash
$ ./pants filedeps --transitive helloworld/util:util
BUILD
helloworld/protos/BUILD
helloworld/protos/config.proto
helloworld/util/BUILD
helloworld/util/config_loader.py
helloworld/util/lang.py
requirements.txt
```
[block:api-header]
{
  "title": "`peek` - programmatically inspect a target"
}
[/block]
`peek` outputs JSON for each target specified.

```bash
$ ./pants peek helloworld/util:tests
[
  {
    "address": "helloworld/util:tests",
    "target_type": "python_tests",
    "dependencies": null,
    "description": null,
    "interpreter_constraints": null,
    "skip_black": false,
    "skip_docformatter": false,
    "skip_flake8": true,
    "skip_isort": false,
    "skip_mypy": false,
    "sources": [
      "*.py",
      "*.pyi",
      "!test_*.py",
      "!*_test.py",
      "!tests.py",
      "!conftest.py",
      "!test_*.pyi",
      "!*_test.pyi",
      "!tests.pyi"
    ],
    "tags": null
  }
]
```

You can use `--exclude-defaults` for less verbose output:

```bash
$ ./pants peek helloworld/util:tests
[
  {
    "address": "helloworld/util:tests",
    "target_type": "python_tests",
    "skip_flake8": true,
  }
]
```

`peek` can be particularly useful when paired with [JQ](https://stedolan.github.io/jq/) to query the JSON. For example, you can combine `./pants peek` with JQ to find all targets where you set the field `skip_flake8=True`:

```bash
$ ./pants peek :: | jq -r '.[] | select(.skip_flake8 == true) | .["address"]'
helloworld/greet:lib
helloworld/greet:tests
helloworld/util:lib
```
[block:api-header]
{
  "title": "`count-loc` - count lines of code"
}
[/block]
`count-loc` counts the lines of code of the specified files by running the [Succinct Code Counter](https://github.com/boyter/scc) tool.
[block:code]
{
  "codes": [
    {
      "code": "$ ./pants count-loc ::\n───────────────────────────────────────────────────────────────────────────────\nLanguage                 Files     Lines   Blanks  Comments     Code Complexity\n───────────────────────────────────────────────────────────────────────────────\nPython                    1690    618679    23906      7270   587503      18700\nHTML                        61      6522      694        67     5761          0\nJSON                        36     18755        6         0    18749          0\nYAML                        30      2451        4        19     2428          0\nJavaScript                   6       671       89         8      574         32\nCSV                          1         2        0         0        2          0\nJSONL                        1         4        0         0        4          0\nJinja                        1        11        0         0       11          2\nShell                        1        13        2         2        9          4\nTOML                         1       146        5         0      141          0\n───────────────────────────────────────────────────────────────────────────────\nTotal                     1828    647254    24706      7366   615182      18738\n───────────────────────────────────────────────────────────────────────────────\nEstimated Cost to Develop $22,911,268\nEstimated Schedule Effort 50.432378 months\nEstimated People Required 53.813884\n───────────────────────────────────────────────────────────────────────────────",
      "language": "shell"
    }
  ]
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": "$ ./pants count-loc '**/*.py' '**/*.proto'\n───────────────────────────────────────────────────────────────────────────────\nLanguage                 Files     Lines   Blanks  Comments     Code Complexity\n───────────────────────────────────────────────────────────────────────────────\nPython                      13       155       50        22       83          5\nProtocol Buffers             1        11        3         2        6          0\n───────────────────────────────────────────────────────────────────────────────\nTotal                       14       166       53        24       89          5\n───────────────────────────────────────────────────────────────────────────────",
      "language": "text",
      "name": "Shell"
    }
  ]
}
[/block]
SCC has [dozens of options](https://github.com/boyter/scc#usage). You can pass through options by either setting `--scc-args` or using `--` at the end of your command, like this:

```bash
./pants count-loc '**' -- --no-cocomo
```
[block:callout]
{
  "type": "warning",
  "title": "See unexpected results? Set `pants_ignore`.",
  "body": "By default, Pants will ignore all globs specified in your `.gitignore`, along with `dist/` and any hidden files.\n\nTo ignore additional files, add to the global option `pants_ignore` in your `pants.toml`, using the same [syntax](https://git-scm.com/docs/gitignore) as `.gitignore` files. \n\nFor example:\n\n```toml\n[GLOBAL]\npants_ignore.add = [\"/ignore_this_dir/\"]\n```"
}
[/block]
